folder structure change, added routing

--- a/add-widget/index.html
+++ b/add-widget/index.html
@@ -18,9 +18,9 @@
 
 <body>
     <div class="container">
-        <div class="list-group-item list-group-item-action col-12">
+        <div class="list-group-item list-group-item-action col-10">
             <div class="row">
-                <div class="col-sm-1">
+                <div class="col-md-auto">
                     <img class="profile-img"
                         src="./2159.jpg"
                         alt="">
@@ -33,7 +33,6 @@
                         ENGINEERS) at People.ai</small><br>
                     <small class="text-muted">Daniel Tunkelang et 10 autres relations</small>
                     <div>
-                        <br>
                         <button class="btn btn-outline-grey-dark">Ignorer</button>&nbsp;&nbsp;
                         <button class="btn btn-outline-primary">Oui, se connecter</button>
                     </div>
